--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./c2-assets/logo-header.png" type="image/x-icon" />
     <!--google font-->
     <!--ADLaM Display font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,10 +19,10 @@
     <!--daisyUI cdn-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Browse 4 Pets</title>
+
     <!-- font-awesome -->
     <script src="https://kit.fontawesome.com/6f086dc852.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Nature-s-platter</title>
     <style>
         .adlam-display-regular {
             font-family: "ADLaM Display", serif;
@@ -39,16 +40,15 @@
 </head>
 
 <body>
-    <header>
+    <header class="bg-[#EFEBE3]">
 
-          <!--navbar-->
-        <section class="sora-font">
-            <nav class="  lg:px-32 ">
-                <div class="navbar bg-base-100  py-4 ">
-                    <div class=" navbar-start sora-font">
+        <!--navbar-->
+        <section class="sora-font bg-[#EFEBE3]">
+            <nav class="lg:px-32 bg-[#EFEBE3]">
+                <div class="navbar bg-[#EFEBE3] py-4">
+                    <div class="navbar-start sora-font">
                         <img src="./c2-assets/logo-header.png" alt="">
                     </div>
-
 
                     <div class="navbar-center">
                         <!-- Desktop Menu -->
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="navbar-end hidden md:flex items-center space-x-4">
-                        
+
                         <!-- Search Icon -->
                         <button class="btn btn-ghost btn-circle">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -86,12 +86,27 @@
 
                     </div>
                 </div>
-                </div>
             </nav>
             <div class="border-b border-[#179800] md:hidden"></div>
         </section>
 
-          
+        <!--banner-->
+        <section class="flex-row items-center justify-items-center gap-4">
+            <div class="space-y-6 mt-20 lg:w-1/2 mx-auto text-center">
+                <h1 class="text-4xl font-semibold lg:text-4xl animate-pulse">
+                    Freshness
+                    <span class="text-primary-theme">You Can <br>
+                        Count</span>
+                    On, Prices You will Love!
+                </h1>
+                <p> Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve
+                    got
+                    you covered every day!</p>
+            </div>
+            <div class="pt-10">
+                <img src="./c2-assets/hero-vegetables.png" alt="" class="w-[600px]">
+            </div>
+        </section>
 
     </header>
 
