--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
         </section>
 
-        <!--Population Products-->
+        <!--Popular Products-->
         <section class="bg-[#EFEBE3] py-16 px-4 md:px-36 my-20 ">
             <div class="container mx-auto px-4">
                 <h1 class="py-4 font-semibold text-3xl ">Popular Products</h1>
